# Permanent-Eraser

./: .gitignore  .gitignore.orig  Credits.rtf  Info-PermanentEraser_MAS.plist  Info-PermanentEraser__Upgraded_.plist  Info-PermanentEraser__Upgraded__2.plist  LICENSE  NSAlertCheckbox.h  NSAlertCheckbox.m  NSEvent+ModifierKeys.h  NSEvent+ModifierKeys.m  NSFileManager+Utils.h  NSFileManager+Utils.m  NSMutableArray+utils.m  PE copy 2.icns  PE copy.icns  PE281.icns  PEAppDelegate.h  PEAppDelegate.m  PEController-2.4.0.m  PEController.h  PEController.m  PEFile.h  PEFile.m  PE_2.4.icns  PE_MAS.icns  Permanent_Eraser-Info.plist  Permanent_EraserAppDelegate.h  Permanent_EraserAppDelegate.m  PreferencesController.h  PreferencesController.m  README.md  Read me.rtf  Shredder.aiff  lsof.txt  main.m  pe_codesign.sh  srm-1.2.7  srm-Universal
.svn/: all-wcprops  entries
AGRegex/: AGRegex-0.4.tgz
srm/srm-1.2.10/: ChangeLog  Makefile.in  NEWS  config.h.in  configure.in  srm.sln
srm/srm-1.2.10/.svn/: all-wcprops  entries
srm/srm-1.2.10/.svn/text-base/: INSTALL.svn-base  configure.svn-base  srm.spec.in.svn-base
srm/srm-1.2.10/doc/.svn/: entries
srm/srm-1.2.10/doc/.svn/text-base/: Makefile.in.svn-base
srm/srm-1.2.10/lib/: Makefile.in  getopt.c
srm/srm-1.2.10/lib/.svn/: all-wcprops  entries
srm/srm-1.2.10/src/: error.c  main.c  rename_unlink.c  srm.h  sunlink.c  tree_walker.c
srm/srm-1.2.10/src/.svn/: entries
srm/srm-1.2.10/src/.svn/text-base/: Makefile.in.svn-base  random.c.svn-base
srm/srm-1.2.11/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  config.h.in  configure  configure.in  srm.spec.in
srm/srm-1.2.11/.svn/: all-wcprops  entries
srm/srm-1.2.11/doc/: Makefile.in  srm.1
srm/srm-1.2.11/doc/.svn/: all-wcprops  entries
srm/srm-1.2.11/lib/: getopt1.c
srm/srm-1.2.11/lib/.svn/: entries
srm/srm-1.2.11/src/: Makefile.am  error.c  impl.h  main.c  rename_unlink.c  sunlink.c
srm/srm-1.2.11/src/.svn/: entries
srm/srm-1.2.11/src/.svn/text-base/: Makefile.in.svn-base  tree_walker.c.svn-base
srm/srm-1.2.11/win/: Makefile.am  Makefile.in  config.h  tree.cpp  unistd.h
srm/srm-1.2.11/win/.svn/: entries
srm/srm-1.2.11/win/.svn/text-base/: srm.rc.svn-base
(+891 files in other folders)
